# ods-exd-api-box

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .releaserc.json  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  docs.yml  pr-validation.yml
docs/: _config.yml  architecture.md  docker.md  exd-file-interface.md  file-simple-interface.md  index.md  interfaces.md  plugins.md  server-options.md
ods_exd_api_box/: __init__.py  exceptions.py  external_data_reader.py  file_handler_registry.py  param_parser.py  server.py
ods_exd_api_box/proto/: .update_stubs.sh  __init__.py  ods_external_data_pb2.py  ods_external_data_pb2_grpc.py  ods_pb2.py  ods_pb2_grpc.py
ods_exd_api_box/simple/: __init__.py  file_simple.py  file_simple_interface.py
ods_exd_api_box/utils/: __init__.py  attribs_helper.py  attribute_helper.py  env_argument_parser.py  param_parser.py  time_helper.py
tests/: Dockerfile.test  Dockerfile_regenerate.test  external_data_file.py  test_attribs_helper.py  test_docker_integration.py  test_docker_integration_tls.py  test_env_argument_parser.py  test_exd_api.py  test_exd_api_datatypes.py  test_exd_api_different_length.py  test_exd_api_etc.py  test_nptdms.py  test_param_parser.py
tests/simple/: Dockerfile_simple.test  file_simple_example.py  file_simple_example2.py  test_docker_integration.py  test_exd_api.py  test_file_simple_example.py  test_file_simple_example2.py
